Added collionBox instead of individual Collision Rect, Level can now give a list of collision rectangel, future update to collions intersaction decited by the user self

--- a/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
+++ b/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BulletR.cs" />
     <Compile Include="Bullet.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="CollisionBox.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Hiro.cs" />
     <Compile Include="ICollide.cs" />
