started something with the bullets, added a sheep for the sheep-i-nator

--- a/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
+++ b/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Lift.cs" />
     <Compile Include="LiftSide.cs" />
     <Compile Include="PhysicsBox.cs" />
+    <Compile Include="Sheep.cs" />
     <Compile Include="Z_MovingPlatform.cs" />
     <Compile Include="Orih.cs" />
     <Compile Include="Program.cs" />
