Added a General "database" for textures, ipv bepaalde textures mee te geven aan de klasse, hebben we nu een statische klasse die alle textures heeft die opgevraagd kunnen worden, gevolg, minder geheugen en objecten zijn nu ook makkelijker om te zetten naar een ander type (moet enkel de texture nummer aanpassen)

--- a/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
+++ b/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CollisionBox.cs" />
     <Compile Include="Fyer.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="General.cs" />
     <Compile Include="Hiro.cs" />
     <Compile Include="ICollide.cs" />
     <Compile Include="Level.cs" />
