Big update: press enter to continue, Level 1 is more noob friendly, nerfed the flamethrower a bit, increased health points of all users, Interface updateable blocs, for easyer update

--- a/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
+++ b/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
@@ -60,6 +60,7 @@
     <Compile Include="PhysicsBox.cs" />
     <Compile Include="Sheep.cs" />
     <Compile Include="UI.cs" />
+    <Compile Include="UpdatetableBlock.cs" />
     <Compile Include="Z_MovingPlatform.cs" />
     <Compile Include="Orih.cs" />
     <Compile Include="Program.cs" />
