--- a/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
+++ b/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
@@ -58,7 +58,7 @@
     <Compile Include="LiftSide.cs" />
     <Compile Include="Z_PhysicsBox.cs" />
     <Compile Include="UI.cs" />
-    <Compile Include="UpdatetableBlock.cs" />
+    <Compile Include="IBlock.cs" />
     <Compile Include="Z_MovingPlatform.cs" />
     <Compile Include="Orih.cs" />
     <Compile Include="Program.cs" />
