--- a/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
+++ b/LineRunnerShooter/LineRunnerShooter/LineRunnerShooter.csproj
@@ -60,7 +60,7 @@
     <Compile Include="UI.cs" />
     <Compile Include="IBlock.cs" />
     <Compile Include="Z_MovingPlatform.cs" />
-    <Compile Include="Orih.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
